<resources>
    <string name="app_name">TermProject</string>


    <string name="minus">-</string>
    <string name="plus">+</string>

    <string name="random_text_title">Select the level of Importance from 0-10:</string>
    <string name="select_relation">Select the Relation of the messages recipient</string>

    <string name="family">Family</string>
    <string name="friend">Friend</string>
    <string name="significant_other">Significant Other</string>
    <string name="generic">Generic Relationship</string>

    <string name="contact">Contact</string>
    <string name="send_message">Send Message</string>

    <string name="to_low">Cannot have a number less than 0</string>
    <string name="to_high">Cannot have a number larger than 10</string>

    <string name="not_selected">Please Select a Radio Button first</string>

    <string name="send_message_via">Send Message via</string>


    <string name="importance_1_1">Remind me when I see you, I got something to tell you</string>
    <string name="importance_1_2">Remind me when I see you, I have something pretty cool to tell you</string>
    <string name="importance_1_3">Remind me when I see you, I have something interesting to tell you</string>

    <string name="importance_2_1">Remind me when I see you, I got something amazing to tell you</string>
    <string name="importance_2_2">Remind me when I see you, I have something really cool to tell you</string>
    <string name="importance_2_3">Remind me when I see you, I have something very interesting to tell you</string>

    <string name="importance_3_1">Remind me when I see you, I got something absolutely amazing to tell you</string>
    <string name="importance_3_2">Remind me when I see you, I have the most amazing really cool thing to tell you</string>
    <string name="importance_3_3">Remind me when I see you, I have something extremely interesting to tell you</string>


    <string name="family_end">Sincerely your favorite family member</string>
    <string name="friend_end">From Your Best friend</string>
    <string name="significant_end">Love your favorite person</string>


    <string name="opening_message">Pick a Option:</string>
    <string name="info_text">Send Contact Information</string>
    <string name="forgot_text">Send a quick reminder text</string>

    <string name="information_for_contact_fragment">Select a Contact you want info on:</string>
    <string name="contact_info">Collect Contact info</string>
    <string name="select_contact">Select Contact to send Information</string>







</resources>
