<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/information_for_contact_fragment"
        android:padding="20dp"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/contact_info_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_info"/>

    <TextView
        android:text="@string/select_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:textSize="20dp"/>
    <Button
        android:id="@+id/contact_button_contact_frag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"/>
    <Button
        android:id="@+id/send_message_button_contact_frag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_message"/>

</LinearLayout>