<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/opening_message"
        android:layout_gravity="center"
        android:padding="20dp"
         />

    <Button
        android:id="@+id/send_contact_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_text"
        android:textSize="20dp"
        android:padding="10dp"
        />
    <Button
        android:id="@+id/send_quick_text_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_text"
        android:textSize="20dp"
        android:padding="10dp"/>

</LinearLayout>